--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,10 @@ jobs:
                 export changed_modules=$( git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- modules | grep -E 'modules/.*/'  | cut -d/ -f2 | uniq)
             fi
             echo "$changed_modules"
-            echo "modules_list_output=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp . | jq -c .)"  >> $GITHUB_OUTPUT       # testing friday pm
+            # worked friday PM! just need to see if it can be used as doesn't show quotes around the json list elements...
+            # On tuesday add a new job that uses this value as a matrix to fire off GitVersion for each changed module tag to get the next one available
+            echo "modules_list_output=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp . | jq -c .)"  >> $GITHUB_OUTPUT
+            
             #modules_list_changes=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp .)
             #echo "modules_list_output=$modules_list_changes" >> $GITHUB_OUTPUT
 
@@ -145,6 +148,14 @@ jobs:
         name: Debug check of module2's next version to use
         run: |
             echo "Module 2 Next version is ${{ steps.version_step_module2.outputs.MajorMinorPatch }}"
+
+  determine_module_verions:
+    name: Calculate next changed module verion(s)
+    runs-on: ubuntu-latest
+    needs:
+      - build_configuration
+    steps:
+      - run: echo '${{ toJSON(needs.build_configuration.outputs) }}'
 
   run_tests:
     name: run_tests
