--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -124,9 +124,11 @@ jobs:
           merge-multiple: true
 
       # Handle multiple file wildcards in the command
-      - run: echo "module_next_versions=$(for file in module_versions/module*; do cat $file; done)" >> $GITHUB_OUTPUT
-      - run: echo "module_next_versions=\"$(for file in module_versions/module*; do cat $file; done | tr '\n' ' ' | xargs)"\" >> $GITHUB_OUTPUT
-
+      #- run: echo "module_next_versions=$(for file in module_versions/module*; do cat $file; done)" >> $GITHUB_OUTPUT
+      #- run: echo "module_next_versions=\"$(for file in module_versions/module*; do cat $file; done | tr '\n' ' ' | xargs)"\" >> $GITHUB_OUTPUT
+      - run: |
+          myvar="$(cat module_versions/module*)"
+          echo $myvar
 
       #- run: echo "module_next_versions=$(cat module_versions/module*)" >> $GITHUB_OUTPUT
 
