--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -127,8 +127,10 @@ jobs:
       #- run: echo "module_next_versions=$(for file in module_versions/module*; do cat $file; done)" >> $GITHUB_OUTPUT
       #- run: echo "module_next_versions=\"$(for file in module_versions/module*; do cat $file; done | tr '\n' ' ' | xargs)"\" >> $GITHUB_OUTPUT
       - run: |
-          myvar="$(cat module_versions/module*)"
-          echo $myvar
+          export modules_next_string="$(cat module_versions/module*)"    # TODO: might not like newlines...
+          echo "module_next_versions=$modules_next_string" >> $GITHUB_OUTPUT
+          #echo "module_next_versions=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp . | jq -c .)"  >> $GITHUB_OUTPUT 
+          #echo $myvar
 
       #- run: echo "module_next_versions=$(cat module_versions/module*)" >> $GITHUB_OUTPUT
 
