--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -134,6 +134,9 @@ jobs:
           # HERE
           # echo "modules_list_output=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp . | jq -c .)"  >> $GITHUB_OUTPUT
           cat module_versions/* | tr '\n' ' ' | xargs   # >> $GITHUB_OUTPUT
+          export "modules_next_string=$(cat module_versions/* | tr '\n' ' ' | xargs)"   # >> $GITHUB_OUTPUT
+          echo "$modules_next_string"
+          echo "module_next_versions" >> $GITHUB_OUTPUT
 
           #echo "module_next_versions=$(echo "$changed_modules" | jq  --raw-input .  | jq --slurp . | jq -c .)"  >> $GITHUB_OUTPUT 
           #echo $myvar
