--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -114,6 +114,8 @@ jobs:
     #if: always()
     needs: [get-changed-next-module-versions]
     runs-on: ubuntu-latest
+    #outputs:
+    #  modules_json_list: ${{ steps.build_changed_files.outputs.modules_list_output }}
     steps:
       - id: retrieve_changed_module_versions
         name: Download blob module_versions from GitHub Actions Artifacts which stored the next changed module versions to use
@@ -126,7 +128,8 @@ jobs:
       # Handle multiple file wildcards in the command
       #- run: echo "module_next_versions=$(for file in module_versions/module*; do cat $file; done)" >> $GITHUB_OUTPUT
       #- run: echo "module_next_versions=\"$(for file in module_versions/module*; do cat $file; done | tr '\n' ' ' | xargs)"\" >> $GITHUB_OUTPUT
-      - run: |
+      - id: combine_module_versions
+        run: |
           #cat module_versions/module*
           #export "modules_next_string=$(cat module_versions/module*)"    # TODO: might not like newlines...
           #echo "module_next_versions=$modules_next_string" >> $GITHUB_OUTPUT
@@ -148,7 +151,7 @@ jobs:
       #- run: echo "module_next_versions=$(cat module_versions/module*)" >> $GITHUB_OUTPUT
 
       - id: check_module_versions_output
-        run: echo ${{ steps.merge_module_versions.outputs.module_versions_string }}
+        run: echo ${{ steps.combine_module_versions.outputs.module_versions_string }}
       
       # - id: setup_python
       #   name: Set up Python to use
