--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -149,12 +149,13 @@ jobs:
 
 
           # # BASH SCRIPT VARIABLES to JSON
-          # MODULE_NAME=module1
-          # MODULE_NEXT_VERSION=0.0.3
-          # JSON_STRING=$( jq -n \
-          #                   --arg bn "$MODULE_NAME" \
-          #                   --arg on "$MODULE_NEXT_VERSION" \
-          #                   '{module_name: $bn, module_next_version: $on}' )
+          MODULE_NAME=module1
+          MODULE_NEXT_VERSION=0.0.3
+          JSON_STRING=$( jq -n \
+                            --arg bn "$MODULE_NAME" \
+                            --arg on "$MODULE_NEXT_VERSION" \
+                            '{module_name: $bn, module_next_version: $on}' )
+          echo "$JSON_STRING"
           #
           ## GIVES: { "module_name": "module1", "module_next_version": "0.0.3" }
 
