--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -151,11 +151,12 @@ jobs:
           # # BASH SCRIPT VARIABLES to JSON
           MODULE_NAME=module1
           MODULE_NEXT_VERSION=0.0.3
-          JSON_STRING=$( jq -n \
+          # -c = --compact-output to a single line. Easier to handle in bash
+          JSON_STRING=$( jq -n -c \
                             --arg bn "$MODULE_NAME" \
                             --arg on "$MODULE_NEXT_VERSION" \
                             '{module_name: $bn, module_next_version: $on}' )
-          echo "$JSON_STRING"
+          echo "JSON_STRING=$JSON_STRING"
           #
           ## GIVES: { "module_name": "module1", "module_next_version": "0.0.3" }
 
