--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -120,9 +120,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 
-      - run: echo ${{matrix.include.site}}
-      - run: echo ${{matrix}}
-      - run: echo ${{matrix.include}}
+      - run: echo ${{matrix.site}}
+      # - run: echo ${{matrix}}
+      - run: echo ${{matrix.test}}
       # - name: Run tests
       #   run: |
       #     echo "Running tests for ${{ matrix.site }} in ${{ matrix.test }}"
