--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -82,6 +82,23 @@ jobs:
             #       "next": ""
             #     },
             #   },
+      - id: setup_python
+        name: Set up Python to use
+        uses: actions/setup-python@v5
+        with:
+            python-version: 3.12
+    
+      - id: run_script
+        name: Run script
+        run: |
+            # causes failure if python script fails
+            set -e 
+            python3 modules/${{ matrix.module }}/test.py -f "${{ steps.build_changed_files.outputs.changed_files }}" -o "${{ env.NBS_MODULE_MATRIX_NAME }}"
+  
+    
+
+
+
 
   # run_tests:
   #   strategy:
@@ -104,15 +121,56 @@ jobs:
   #       run: npm install -g npm@${{ matrix.npm }}
   #     - run: npm --version
 
-  includes_only:
+  build_tests_config:
+    name: Build Tests Configuration
+    runs-on: ubuntu-latest
+    needs: [build_configuration]
+    steps:
+      - id: setup_python
+        name: Set up Python to use
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+      - name: Run a python script inline to convert a bash space deparated string into a json list
+        shell: python
+        run: |
+          from matrix_helper import MatrixHelper
+
+          # Create an instance of the MatrixHelper class
+          matrix_helper = MatrixHelper()
+          
+          # Configure logging to output to both file and console
+          matrix_helper.output_logging()
+          
+          # Generate a list of includes for module1
+          item = "module1"
+          list = ["unit", "bdd"]
+          # Generate includes using the helper method. Note, using the extra parameter defaults of "module" and "test"
+          includes = matrix_helper.generate_includes_from_list(item, list)
+          #print(includes)
+
+          # Generate a list of includes for module2
+          item = "module2"
+          list = ["unit"]
+          # Merge all the includes into a single list
+          includes.extend(
+              matrix_helper.generate_includes_from_list(item, list)
+          )
+          # Wrap the includes in a JSON object for Github Actions
+          json_output = matrix_helper.wrap_includes_in_json(includes)
+          # Print the generated includes for demonstration purposes
+          print(json_output)
+
+
+  run_module_tests:
     needs: [get-changed-next-module-versions]
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - site: "module1"
+          - module: "module1"
             test: "unit"
-          - site: "module1"
+          - module: "module1"
             test: "bdd"
     steps:
       - id: run_test
@@ -120,9 +178,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 
-      - run: echo ${{matrix.site}}
+      - run: |
+          echo "For Module: ${{matrix.module}} Running Test: ${{matrix.test}}"    
       # - run: echo ${{matrix}}
-      - run: echo ${{matrix.test}}
+      # - run: echo ${{matrix.test}}
       # - name: Run tests
       #   run: |
       #     echo "Running tests for ${{ matrix.site }} in ${{ matrix.test }}"
