--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -131,6 +131,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      - name: show python path
+        run: |
+            python -c "import sys; print('\n'.join(sys.path))"
       - name: Run a python script inline to convert a bash space deparated string into a json list
         shell: python
         run: |
