--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -126,6 +126,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_configuration]
     steps:
+      - id: run_test
+        name: Run the specified test
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - id: setup_python
         name: Set up Python to use
         uses: actions/setup-python@v5
@@ -137,7 +142,8 @@ jobs:
       - name: Run a python script inline to convert a bash space deparated string into a json list
         shell: python
         run: |
-          from .github.scripts.matrix_helper import MatrixHelper
+          #from .github.scripts.matrix_helper import MatrixHelper
+          from matrix_helper import MatrixHelper
 
           # Create an instance of the MatrixHelper class
           matrix_helper = MatrixHelper()
@@ -180,7 +186,7 @@ jobs:
         name: Run the specified test
         uses: actions/checkout@v4
         with:
-          fetch-depth: 
+          fetch-depth: 0
       - run: |
           echo "For Module: ${{matrix.module}} Running Test: ${{matrix.test}}"    
       # - run: echo ${{matrix}}
