--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -143,7 +143,8 @@ jobs:
       - name: show python path
         run: |
             python -c "import sys; import os; print('\n'.join(sys.path)); print(os.getcwd())"
-      - name: Run a python script inline to convert a bash space deparated string into a json list
+      - id: build_tests_matrix_includes
+        name: Run a python script inline to convert a bash space deparated string into a json list
         shell: python
         run: |
           # codepath isn't in PYTHONPATH
@@ -172,6 +173,8 @@ jobs:
           )
           final_includes = app.wrap_includes(includes)
           app.output_json(final_includes, "TESTS_MATRIX_OUTPUT")
+      - run: |
+        echo "${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}"
 
 
   run_module_tests:
