--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -125,6 +125,8 @@ jobs:
     name: Build Tests Configuration
     runs-on: ubuntu-latest
     needs: [build_configuration]
+    outputs:
+      tests_matrix: ${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}
     steps:
       - id: run_test
         name: Run the specified test
@@ -178,15 +180,15 @@ jobs:
 
 
   run_module_tests:
-    needs: [get-changed-next-module-versions]
+    needs: [build_tests_config]
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        include:
-          - module: "module1"
-            test: "unit"
-          - module: "module1"
-            test: "bdd"
+      matrix: ${{ fromJSON(needs.build_tests_config.outputs.tests_matrix) }}
+        # include:
+        #   - module: "module1"
+        #     test: "unit"
+        #   - module: "module1"
+        #     test: "bdd"
     steps:
       - id: run_test
         name: Run the specified test
