--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           # codepath isn't in PYTHONPATH
           # ${{ github.workspace }} # e.g, /home/runner/work/my-repo-name/my-repo-name
-          from scripts import matrix_helper
+          from scripts import modules_config
 
           # Create an instance of the ModulesConfig class
           app = ModulesConfig()
