--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -85,4 +85,6 @@ jobs:
         name: Check the modules config output is correct
         run: |
           echo "${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}"
+          echo "${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}"
+          
 
