--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -87,6 +87,8 @@ jobs:
       - id: debug_show_modules_config
         name: Check the modules config output is correct
         run: |
+          echo "$PWD"
+          echo "ls -la"
           echo "${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}"
           echo "${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}"
           
