--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -26,7 +26,7 @@ jobs:
     #  matrix: ${{ steps.run_script.outputs.MODULES_MATRIX }}    # Will be used in another job to run module tests with
     outputs:
         all_changed_files: ${{ steps.build_changed_files.outputs.changed_files }}        # diff of all current files that have changed. ALso used to build a configuration on if a module has tests to run
-        tests_matrix: ${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}    # matrix of tests to run against changed modules
+        tests_matrix: ${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}    # matrix of tests to run against changed modules
     #env:
     #  NBS_MODULE_MATRIX_NAME: "MODULES_MATRIX"                # Defines the variable name in GITHUB_OUTPUT that the python modules script outputs the data to
     steps:
