--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -25,8 +25,9 @@ jobs:
     #outputs:
     #  matrix: ${{ steps.run_script.outputs.MODULES_MATRIX }}    # Will be used in another job to run module tests with
     outputs:
-        all_changed_files: ${{ steps.build_changed_files.outputs.changed_files }}        # diff of all current files that have changed. ALso used to build a configuration on if a module has tests to run
-        tests_matrix: ${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}    # matrix of tests to run against changed modules
+        all_changed_files: ${{ steps.build_changed_files.outputs.changed_files }}                 # diff of all current files that have changed. ALso used to build a configuration on if a module has tests to run
+        modules_configuration: ${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}    # configuration of module information for any that have had file changes made. Consists of the module name and a list of tests, if present. Future additions will be to detect the current module version and predict the next version to use if all tests pass
+        tests_matrix: ${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}        # matrix of tests to run against changed modules
     #env:
     #  NBS_MODULE_MATRIX_NAME: "MODULES_MATRIX"                # Defines the variable name in GITHUB_OUTPUT that the python modules script outputs the data to
     steps:
@@ -87,9 +88,7 @@ jobs:
       - id: debug_show_modules_config
         name: Check the modules config output is correct
         run: |
-          echo "$PWD"
-          ls -la
-          echo "${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}"
+          echo "${{ steps.build_tests_matrix_includes.outputs.MODULES_CONFIG }}"    # TODO: Push this one to an Environment variable so it can be used and updated as needed
           echo "${{ steps.build_tests_matrix_includes.outputs.TESTS_MATRIX_OUTPUT }}"
           
 
